[gd_scene load_steps=13 format=3 uid="uid://xo6sxu8p20wl"]

[ext_resource type="Script" path="res://scripts/turret_enemy.gd" id="1_vngd6"]
[ext_resource type="Texture2D" uid="uid://yv5e0me3wtwk" path="res://assets/visuals/1x1 red.png" id="2_byu35"]
[ext_resource type="Texture2D" uid="uid://du80tiv02rwhh" path="res://assets/visuals/turret_enemy_frames.png" id="2_lgba6"]
[ext_resource type="Texture2D" uid="uid://fybw7abr4k1m" path="res://assets/visuals/1x1 green.png" id="3_rylj0"]
[ext_resource type="PackedScene" uid="uid://diofy0clki1nq" path="res://scenes/spinbar.tscn" id="5_1xi0r"]
[ext_resource type="AudioStream" uid="uid://bam470iw38qw2" path="res://assets/audio/sfx/turret_beep.wav" id="6_2kpxy"]
[ext_resource type="AudioStream" uid="uid://3slkdoq1oixj" path="res://assets/audio/sfx/turretbarhit.wav" id="7_evb1n"]
[ext_resource type="AudioStream" uid="uid://q2031latauof" path="res://assets/audio/sfx/turret_break.wav" id="8_70k1o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j8w7i"]
radius = 12.0

[sub_resource type="Animation" id="Animation_h3jvk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4ho7b"]
resource_name = "flash"
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.3, 0.35, 0.4, 0.45, 0.6, 0.65, 0.7, 0.75, 0.85, 0.9, 0.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3, 0, 1, 2, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ir1uw"]
_data = {
"RESET": SubResource("Animation_h3jvk"),
"flash": SubResource("Animation_4ho7b")
}

[node name="TurretEnemy" type="StaticBody2D" groups=["enemy"]]
collision_layer = 11
collision_mask = 11
script = ExtResource("1_vngd6")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -3.14159
scale = Vector2(-0.495774, -0.495774)
texture = ExtResource("2_lgba6")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j8w7i")

[node name="healthbar" type="TextureProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -25.0
offset_right = 13.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
nine_patch_stretch = true
texture_under = ExtResource("2_byu35")
texture_progress = ExtResource("3_rylj0")

[node name="spinbar" parent="." instance=ExtResource("5_1xi0r")]

[node name="new_spinbar" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="flash_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ir1uw")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_2kpxy")
bus = &"sfx"

[node name="hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_evb1n")
bus = &"sfx"

[node name="turret_die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_70k1o")
bus = &"sfx"

[connection signal="spinbar_broken" from="spinbar" to="." method="_on_spinbar_spinbar_broken"]
[connection signal="timeout" from="new_spinbar" to="." method="_on_new_spinbar_timeout"]
